20190206	Implementing the ARM ldrex/strex (load-linked / store-
		conditional) instructions, and mls (multiply-and-subtract).
20190218	Implementing the ARM rev, uxtab, and uxtah instructions.
20190224	Implementing the ARM sbfx instruction.
20190227	Adding a skeleton RISC-V CPU and RISC-V "virt" machine.
		Refactoring some parts of the new framework to deal better
		with variable length instructions during disassembly.
20190306	Applying a patch from Andreas Gustafsson (gson) to set the
		SA_RESTART flag in the timer sigaction call.
20190417	Applying most of NetBSD's patches for the gxemul package (all
		except two).
20190418	Adding 512 KB ROM at 0xfff80000 in the HP 700/RX machine.
20190422	Implementing the i960 "mov reg,reg" instruction.
20190502	Adding a section to the documentation about how to use the
		emulator as a debugger (breakpoints, unassembling, single-
		stepping, inspecting registers, and so on).
20190515	Making sure that when invalidating virtual addresses in
		the dyntrans cache, take into account that not all CPUs can
		use all 64 bits for virtual addresses. This fixes a very old
		bug which affected Glatt MU/MK. Unfortunate side effect means
		that internal cache invalidation goes from O(1) to O(n) for
		64-bit address spaces. :-(
20190519	Better fix for the issue found four days ago, taking 32-bit
		addressing (UX=0) on 64-bit MIPS CPUs into account. The cache
		invalidation code is now O(1) again. :-)
20190520	Unfortunately, to make everything work with all guest OSes
		with many different kinds of CPUs (R3000, R4000, R10000),
		the invalidation is now O(n) again, but it works.
20190521	De-emphasizing the new framework in the man page and in the
		help/usage message produced when running gxemul with no
		arguments, focusing on the old/legacy framework.
		Removing the MIPS CPU emulation and testmips machines from
		the new framework completely. Any MIPS enhancements and bug
		fixes will go into the old framework only.