@@ -420,7 +420,7 @@ examples of how the demo programs can be built.
 <p>Once you have compiled the Hello World program into a binary,
 <tt>hello_mips</tt>, start it like this:
 <pre>
-	<b>gxemul -E oldtestmips hello_mips</b>
+	<b>gxemul -E testmips hello_mips</b>
 </pre>
 
 <p>Then you can experiment using the commands further up on this page.
@@ -445,7 +445,7 @@ It can either run in "bare" mode, where no devices are included by default
 (just the CPU), or in a "test" mode where some simple devices are 
 emulated.
 
-<p>The test machines (<tt>oldtestmips</tt>, <tt>testppc</tt>, etc) have the
+<p>The test machines (<tt>testmips</tt>, <tt>testppc</tt>, etc) have the
 following experimental devices:
 
 <p>
@@ -866,7 +866,7 @@ what kind of IPI it was.
 <p><center>
 <table border="1">
 	<tr><td align="center">
-		<b><tt>oldtestmips</tt></b> (as native MIPS interrupts)
+		<b><tt>testmips</tt></b> (as native MIPS interrupts)
 	</td></tr>
 	<tr><td>
 		<table border="0">
