@@ -432,7 +432,7 @@ If you have compiled the small Hello World program mentioned in the
 documentation, the following command will start up an
 emulated test machine in "paused" mode:
 .Pp
-.Dl "gxemul -E oldtestmips -V hello_mips"
+.Dl "gxemul -E testmips -V hello_mips"
 .Pp
 Paused mode means that you enter the interactive single-step debugger
 directly at startup, instead of launching the Hello World program.
